--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,17 +4,14 @@ plugins {
     id 'kotlin-kapt'
     id 'androidx.navigation.safeargs.kotlin'
     id 'kotlin-parcelize'
+    id 'dagger.hilt.android.plugin'
 }
+apply plugin: 'kotlin-android'
 
 android {
     compileSdk 32
 
     viewBinding {
-        enabled true
-    }
-
-
-    dataBinding {
         enabled true
     }
 
@@ -29,7 +26,12 @@ android {
     }
 
     buildTypes {
+        debug {
+            buildConfigField 'String', 'BASE_URL', '"https://fastapi-pizza.herokuapp.com/"'
+        }
+
         release {
+            buildConfigField 'String', 'BASE_URL', '"https://fastapi-pizza.herokuapp.com/"'
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
@@ -45,22 +47,21 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.5.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation 'androidx.core:core-ktx:1.8.0'
+    implementation 'androidx.appcompat:appcompat:1.4.2'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     //Navigation Components
-    def navigationVersion = '2.4.1'
+    def navigationVersion = '2.5.1'
     implementation "androidx.navigation:navigation-fragment-ktx:${navigationVersion}"
     implementation "androidx.navigation:navigation-ui-ktx:${navigationVersion}"
 
     //Coroutines
-    def coroutinesVersion = '1.5.2'
+    def coroutinesVersion = '1.6.1'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:${coroutinesVersion}"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:${coroutinesVersion}"
 
@@ -68,16 +69,16 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
 
     //Lifecycle
-    def lifecycleVersion = '2.5.0'
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.4.1"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1"
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.1"
+    def lifecycleVersion = '2.5.1'
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycleVersion"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycleVersion"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycleVersion"
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     //noinspection LifecycleAnnotationProcessorWithJava8
-    kapt 'androidx.lifecycle:lifecycle-compiler:2.4.1'
+    kapt 'androidx.lifecycle:lifecycle-compiler:2.5.1'
 
     //Internet
-    def okHttpVersion = "4.8.0"
+    def okHttpVersion = "4.9.1"
     def retrofitVersion = "2.9.0"
     implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
     implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofitVersion"
@@ -85,14 +86,14 @@ dependencies {
     implementation "com.squareup.okhttp3:okhttp:$okHttpVersion"
     implementation "com.squareup.okhttp3:logging-interceptor:$okHttpVersion"
 
-    //Koin
-    def koinVersion = "3.1.5"
-    implementation "io.insert-koin:koin-android:$koinVersion"
-
     //Design
-    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'com.google.android.material:material:1.6.1'
 
     //ViewPager2
     implementation "androidx.viewpager2:viewpager2:1.0.0"
+
+    //Hilt
+    implementation 'com.google.dagger:hilt-android:2.42'
+    kapt 'com.google.dagger:hilt-compiler:2.42'
 
 }
